<ScrollView
    xmlns:tools="http://schemas.android.com/tools"    
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
     tools:context=".ProgressActivity"    > 
<LinearLayout 

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
 >
    
    <TextView 
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress"
        android:textSize="20sp"
		android:paddingLeft="5dp" 
		android:paddingBottom="5dp"
        android:textAllCaps="true"
        android:textStyle="bold"
        />
   		
 	<TextView
	    android:id="@+id/level1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/level1"
	    android:textSize="15sp"
	    android:paddingLeft="20dp" 
        android:textStyle="bold"	 
        android:layout_marginTop="5dp"   
	    />

	<TableLayout
	    android:id="@+id/table1"
 	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
   	    android:paddingLeft="40dp" 
	    >
	    
	    <TableRow
	        android:id="@+id/tableRow11"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content">


	       	<TextView 
	       	    android:text="@string/numbersquares3"
	       	    />
	       	<ImageView 
	       	    android:id="@+id/complete11"
	       	    android:src="@drawable/btn_check_on"
	       		android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
 		        android:paddingLeft="30dp"
	       	    />

	     </TableRow>

	    <TableRow
	        android:id="@+id/tableRow12"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	       	
	       	<TextView 
	       		android:text="@string/numbersquares4"
	       		/>
	       	<ImageView
	       	    android:id="@+id/complete12"	       	    
	       	    android:src="@drawable/btn_check_on"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
 		        android:paddingLeft="30dp"
	       	    />
	     </TableRow>   
	

	    <TableRow
	        android:id="@+id/tableRow13"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	       	<TextView
	       	    android:text="@string/numbersquares5"
	       	    />
	       	<ImageView
	       	    android:id="@+id/complete13"	       	    
	       	    android:src="@drawable/btn_check_on"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
 		        android:paddingLeft="30dp"
 	       	    />
	    </TableRow>
	</TableLayout>

	<TextView
    	android:id="@+id/level2"    
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/level2"
    	android:textSize="15sp"   
    	android:paddingLeft="20dp" 
    	android:textStyle="bold"
        android:layout_marginTop="5dp"      	
    	/>

	<TableLayout
    	android:id="@+id/table2"
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content" 
    	android:paddingLeft="40dp"
		>

    	<TableRow
        	android:id="@+id/tableRow21"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" >
	       	<TextView 
	       		android:text="@string/numbersquares4"
	       		/>
	       	<ImageView
	       	    android:id="@+id/complete21"	       	    
	       	    android:src="@drawable/btn_check_on"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
 		        android:paddingLeft="30dp"
	       	    />
		</TableRow>    	    	

    	<TableRow
        	android:id="@+id/tableRow22"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"> 
	       	<TextView 
	       		android:text="@string/numbersquares5"
	       		/>
	       	<ImageView
	       	    android:id="@+id/complete22"
	       	    android:src="@drawable/btn_check_on"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
 		        android:paddingLeft="30dp"
	       	    />
		</TableRow>    	    	

    	<TableRow
        	android:id="@+id/tableRow23"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" >
	       	<TextView 
	       		android:text="@string/numbersquares6"
	       		/>
	       	<ImageView
	       	    android:id="@+id/complete23"	       	    
	       	    android:src="@drawable/btn_check_on"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
 		        android:paddingLeft="30dp"
	       	    />
		</TableRow>    	    	
	</TableLayout>
  
	<TextView
    	android:id="@+id/level3" 
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:text="@string/level3"
    	android:textSize="15sp"    
    	android:paddingLeft="20dp" 
        android:textStyle="bold"  
        android:layout_marginTop="5dp" 
		/>
 
	<TableLayout
	    android:id="@+id/table3"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="40dp"
		>

	    <TableRow
        	android:id="@+id/tableRow31"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content">
	       	<TextView 
	       		android:text="@string/numbersquares5"
	       		/>
	        <ImageView
	       	    android:id="@+id/complete31"	            
	       	    android:src="@drawable/btn_check_on"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
 		        android:paddingLeft="30dp"
	       	    />
	       	
		 </TableRow>    	    	
	     <TableRow
        	android:id="@+id/tableRow32"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content" >
	       	<TextView 
	       		android:text="@string/numbersquares6"
	       		/>
	       <ImageView
	       	    android:id="@+id/complete32"	           
	       	    android:src="@drawable/btn_check_on"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
 		        android:paddingLeft="30dp"
	       	    />
		 </TableRow>    	    	


    	 <TableRow
	        android:id="@+id/tableRow33"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content" >
	       	<TextView 
	       		android:text="@string/numbersquares7"
	       	    />
	       <ImageView
	       	    android:id="@+id/complete33"	           
	       	    android:src="@drawable/btn_check_on"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
 		        android:paddingLeft="30dp"
	       	    />
		</TableRow>    	    	
	</TableLayout>
	
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    
    <Button
        android:id="@+id/clearall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"        
        android:textSize="12sp"
        android:text="@string/clearall" />
</RelativeLayout>
</LinearLayout>
</ScrollView>
