<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

		<LinearLayout
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	   	 	android:orientation="horizontal">
		    
		    <TextView 
		    	android:id="@+id/time"
			    android:layout_height="wrap_content"
			    android:layout_width="0dp"
	            android:textStyle="bold"
		        android:textSize="17sp"     
		        android:layout_weight="1"    
		        android:layout_marginLeft="25dp"
		        android:text="@string/time"
		        android:background="@drawable/leftrect"		
				android:gravity="center"		        
		        />

			 <TextView
		    	android:id="@+id/score"			 
			    android:layout_height="wrap_content"
			    android:layout_width="0dp"
	            android:textStyle="bold"
		        android:textSize="17sp"     
		        android:layout_weight="1"    
		        android:text="@string/score2"		        
		        android:layout_marginRight="25dp"
		        android:background="@drawable/rightrect"
				android:gravity="center"		        		
		        />
		    		    
		</LinearLayout>
		    
	  <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:id="@+id/layout1">
	  

	    <TextView
	        android:id="@+id/meaning"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/meaning"
			android:layout_weight="1"    
      		android:layout_marginLeft="25dp"
			android:gravity="center" 
			android:layout_marginTop="75dp"   
            android:textStyle="bold"
	        android:textSize="18sp"            
		    
	        />
	
	    <TextView
	        android:id="@+id/color"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/meaning"
	        android:text="@string/color"
			android:layout_weight="1"   
			android:layout_marginRight="15dp"		
			android:gravity="center"	
			android:layout_marginTop="75dp"	
	        android:textStyle="bold"	
	        android:textSize="18sp"            
	        							      
	        />
	   </LinearLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:id="@+id/layout2"
        android:layout_marginTop="10dp"
        >
  
           <TextView
	        android:id="@+id/colorMeaning"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="36sp"
	        android:textStyle="bold"    
       		android:layout_marginLeft="15dp"	
       		android:layout_marginRight="5dp"
			android:layout_weight="1"
			android:gravity="center"
			android:paddingTop="5dp"				
			android:paddingBottom="5dp"	
			android:background="@drawable/back"			

			/>
			<TextView
	        android:id="@+id/colorShown"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:textSize="36sp"
	        android:textStyle="bold"
			android:layout_marginRight="15dp"	
			android:layout_marginLeft="5dp"
			android:layout_weight="1"
			android:gravity="center"						
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:background="@drawable/back"			
	         />
      </LinearLayout>


      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        >       
    <Button
        android:id="@+id/buttonnomatch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nomatch"
		android:background="@color/dkred"
		android:textColor="@color/white"
		android:layout_marginLeft="20dp"
		android:layout_marginRight="10dp"
		android:gravity="center"
		android:layout_weight="1"					
		/>

    <Button
        android:id="@+id/buttonmatch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/match"
		android:background="@color/dkgreen"
		android:textColor="@color/white"       
		android:layout_marginRight="20dp"	
		android:layout_marginLeft="10dp"
		android:gravity="center"
		android:layout_weight="1"		
         />
 </LinearLayout>
 <ImageView
     android:id="@+id/result"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     />
 <Button 
        android:id="@+id/explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:gravity="center"
		android:text="Explain Game"    
		android:layout_marginLeft="15dp"	
		      
	     />
</LinearLayout>
