<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MemoryMazeActivity" >
	
    
	<Button android:id="@+id/StartGame"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin"	
        />
	
   <Button 
        android:id="@+id/Progress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress"
        />
   
	<GridView
	    android:id="@+id/grid_view1"
	    android:layout_width="155dp"
	    android:layout_height="155dp"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="98dp"
	    android:background="@color/black"
	    android:columnWidth="45dp"
	    android:gravity="center_horizontal"
	    android:horizontalSpacing="5dp"
	    android:numColumns="3"
	    android:paddingBottom="5dp"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:paddingTop="5dp"
	    android:stretchMode="columnWidth"
	    android:verticalSpacing="5dp" >
	</GridView>

	<GridView
	    android:id="@+id/grid_view2"
	    android:layout_width="205dp"
	    android:layout_height="205dp"
	    android:layout_marginTop="50dp"	    
	    android:layout_centerHorizontal="true"
	    android:background="@color/black"
	    android:columnWidth="45dp"
	    android:gravity="center"
	    android:horizontalSpacing="5dp"
	    android:numColumns="4"
	    android:paddingBottom="5dp"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:paddingTop="5dp"
	    android:stretchMode="columnWidth"
	    android:verticalSpacing="5dp" >
	</GridView>
	
		<GridView
	    android:id="@+id/grid_view3"
	    android:layout_width="255dp"
	    android:layout_height="255dp"
	    android:layout_marginTop="18dp"		    
	    android:layout_centerHorizontal="true"
	    android:background="@color/black"
	    android:columnWidth="45dp"
	    android:gravity="center"
	    android:horizontalSpacing="5dp"
	    android:numColumns="5"
	    android:paddingBottom="5dp"
	    android:paddingLeft="5dp"
	    android:paddingRight="5dp"
	    android:paddingTop="5dp"
	    android:stretchMode="columnWidth"
	    android:verticalSpacing="5dp" >
	</GridView>	
	
	<TextView android:id ="@+id/success"
	    android:layout_below="@id/grid_view1"
    	android:layout_marginTop="16dp"	    
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textColor="@color/blue"
	    android:text="@string/success"
	    android:textSize="30sp"
	    android:gravity="center_horizontal"
	    />
		

	<TextView
	    android:id="@+id/error"
	    android:layout_below="@id/grid_view1"	    
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="16dp"
	    android:gravity="center_horizontal"
	    android:text="@string/error"
	    android:textColor="@color/red"
	    android:textSize="30sp" />
	
	</RelativeLayout>